generic_single_ingress_egress/test-images/appnet_agent/envoy_config/lds_config.yaml
---
version_info: '0'
resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: ingress_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: SC_INGRESS_PORT
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: http_proxy
              route_config:
                name: all
                virtual_hosts:
                  - name: ping_vh
                    domains:
                      - '*'
                    routes:
                      - match: { prefix: "/"}
                        route:
                          cluster: local_cluster
              http_filters:
                - name: envoy.filters.http.router
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: egress_listener
    address:
      socket_address:
        address: 127.0.0.1
        port_value: SC_EGRESS_PORT
    listener_filters:
      - name: envoy.filters.listener.original_dst
    filter_chains:
      - filter_chain_match:
          prefix_ranges:
            - address_prefix: 169.254.1.1
              prefix_len: 32
          destination_port: 8080
        filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: remote
              route_config:
                name: outbound_remote_route
                virtual_hosts:
                  - name: outbound_remote_service
                    domains:
                      - "*"
                    routes:
                      - match: { prefix: "/"}
                        route:
                          cluster:  remote_cluster
              http_filters:
                - name: envoy.filters.http.router
